adding a new caption

--- a/catalog.html
+++ b/catalog.html
@@ -171,15 +171,15 @@
                         src="img/catalog/Vector.svg" alt="Vector"></div>
             </div>
             <div class="main-catalogy flex justify-between">
-                <div class="category-items transition h-auto basis-1/2">
+                <div class="category-items transition h-auto basis-1/2 relative">
                     <div class="category-item flex items-end my-5 cursor-pointer">
                         <img src="img/catalog/category-1.png" alt="category-icon">
-                        <h6 class="ml-3">БПЛА Самолетного типа</h6>
+                        <h6 class="ml-3 text-lg leading-5">БПЛА Самолетного типа</h6>
                     </div>
                     <div class="category-item hideMenu">
                         <div class="category-item-menu flex items-end my-5 cursor-pointer">
                             <img src="img/catalog/category-2.png" alt="category-icon">
-                            <h6 class="ml-3">БПЛАмультироторного типа</h6>
+                            <h6 class="ml-3 text-lg leading-5">БПЛАмультироторного типа</h6>
                             <svg class="vector object-cover mb-[7px] ml-[11px] w-[14px]" width="14" height="8"
                                 viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -190,18 +190,18 @@
                         <ul class="sub-menu ml-10 max-w-[214px]">
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-2.1.png" alt="category-icon">
-                                <a href="#" class="ml-3">Дроны опрыскиватели</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Дроны опрыскиватели</a>
                             </li>
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-2.2.png" alt="category-icon">
-                                <a href="#" class="ml-3">Дроны для картографии</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Дроны для картографии</a>
                             </li>
                         </ul>
                     </div>
                     <div class="category-item hideMenu">
                         <div class="category-item-menu flex items-end my-5 cursor-pointer">
                             <img src="img/catalog/category-3.png" alt="category-icon">
-                            <h6 class="ml-3">Полезные нагрузки</h6>
+                            <h6 class="ml-3 text-lg leading-5">Полезные нагрузки</h6>
                             <svg class="vector object-cover mb-[7px] ml-[11px] w-[14px]" width="14" height="8"
                                 viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -212,26 +212,27 @@
                         <ul class="sub-menu ml-10 max-w-[214px]">
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-3.1.png" alt="category-icon">
-                                <a href="#" class="ml-3">Фотокамеры</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Фотокамеры</a>
                             </li>
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-3.2.png" alt="category-icon">
-                                <a href="#" class="ml-3">Мультиспектральные камеры</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Мультиспектральные камеры</a>
                             </li>
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-3.3.png" alt="category-icon">
-                                <a href="#" class="ml-3">Гиростабилизированные видеокамеры и тепловизоры</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Гиростабилизированные видеокамеры и
+                                    тепловизоры</a>
                             </li>
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-3.4.png" alt="category-icon">
-                                <a href="#" class="ml-3">Cпециализированные модули</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Cпециализированные модули</a>
                             </li>
                         </ul>
                     </div>
                     <div class="category-item hideMenu">
                         <div class="category-item-menu flex items-end my-5 cursor-pointer">
                             <img src="img/catalog/category-4.png" alt="category-icon">
-                            <h6 class="ml-3">Комплектующие</h6>
+                            <h6 class="ml-3 text-lg leading-5">Комплектующие</h6>
                             <svg class="vector object-contain mb-[7px] ml-[11px] w-[14px]" width="14" height="8"
                                 viewBox="0 0 15 8" fill="white" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -241,33 +242,50 @@
                         <ul class="sub-menu ml-10 max-w-[214px]">
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-4.1.png" alt="category-icon">
-                                <a href="#" class="ml-3">Батареи</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Батареи</a>
                             </li>
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-4.2.png" alt="category-icon">
-                                <a href="#" class="ml-3">Зарядные устройства</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Зарядные устройства</a>
                             </li>
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-4.3.png" alt="category-icon">
-                                <a href="#" class="ml-3">Генераторы</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Генераторы</a>
                             </li>
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-4.4.png" alt="category-icon">
-                                <a href="#" class="ml-3">Пульты управления</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Пульты управления</a>
                             </li>
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-4.5.png" alt="category-icon">
-                                <a href="#" class="ml-3">Высокоточная навигация</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Высокоточная навигация</a>
                             </li>
                             <li class="category-inner flex items-end my-5">
                                 <img src="img/catalog/category-4.6.png" alt="category-icon">
-                                <a href="#" class="ml-3">Привязные системы для коптеров</a>
+                                <a href="#" class="ml-3 text-lg leading-5">Привязные системы для коптеров</a>
                             </li>
                         </ul>
                     </div>
                     <div class="category-item flex cursor-pointer">
                         <img src="img/catalog/category-5.png" alt="category-icon">
-                        <h6 class="ml-3">Программное обеспечение</h6>
+                        <h6 class="ml-3 text-lg leading-5">Программное обеспечение</h6>
+                    </div>
+
+                    <div class="category_line absolute w-[272px] h-[0.75px] bg-bgline my-10"></div>
+
+                    <div class="category-user mt-20">
+                        <h5 class="text-lg leading-5 mb-5">Производители</h5>
+                        <select
+                            class="select-button bg-black w-[80%] rounded-md py-[18px] px-2 focus-within::outline-none"
+                            name="manufactures">
+                            <option value="Все">Все</option>
+                            <option value="Мониторинг агроопераций">Мониторинг агроопераций</option>
+                            <option value="Критериев и методов оценки">Критериев и методов оценки</option>
+                            <option value="Графика посещений">Графика посещений</option>
+                            <option value="Механики взаимодействия">Механики взаимодействия</option>
+                            <option value="Анализ результатов каждого ключевого этапа">Анализ результатов каждого
+                                ключевого этапа</option>
+                        </select>
                     </div>
                 </div>
                 <div class="drones basis-[75%] max-w-[75%]">
