adding new section

--- a/index.html
+++ b/index.html
@@ -411,9 +411,9 @@
                                 <p> Модель: <span class="font-light">101-0101</span></p>
                             </div>
                             <div class="p-price text-3xl leading-7 mb-12">$15001.27</div>
-                            <button
-                                class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
-                                в корзину</button>
+                            <a href="product1.html"
+                                class="p-shopping cursor-pointer border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                                в корзину</a>
                         </div>
                     </div>
                 </div>
